home component spacing error in fire fox resolved"

--- a/css/base.css
+++ b/css/base.css
@@ -182,8 +182,11 @@ body {
 .mims-nav-link.home-link {
   margin-left: 120px !important;
 }
+.mims-nav-link:hover {
+  color: var(--theme-color-primary) !important;
+}
 .mims-nav-link.active {
-  color: var(--brand-color) !important;
+  color: var(--theme-color-primary) !important;
 }
 .left-links, .right-links {
   position: absolute;
@@ -334,7 +337,7 @@ body {
   text-decoration: none;
   color: var(--section-bg);
   font-size: var(--font-size-medium);
-  font-family: var(--font-light);
+  font-family: var(--font-regular);
   -webkit-border-top-left-radius: 7px;
   -webkit-border-top-right-radius: 7px;
   -moz-border-radius-topleft: 7px;
@@ -547,7 +550,6 @@ body {
   background-color: var(--section-bg);
   padding: 24px;
   margin-top: 30px;
-  height: 100%;
   max-height: 430px;
   border-radius: 4px;
   box-shadow: var(--section-box-shadow);
@@ -978,7 +980,8 @@ body {
 /* --------------------------------------------- */
 .address-list {
   padding-left: 30px;
-  margin-bottom: 34px;
+  padding-bottom: 37px;
+  margin-bottom: 0;
 }
 .address {
   list-style: none;
